# nocode_agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  nocode  nocode-ink  pyproject.toml
.nocode/agents/: explore.md  general-purpose.md  plan.md  verification.md
.skills/long-task-execution/: SKILL.md
features/: bundled-agents-location.md  codex-yolo-command.md  dialog-style-alignment.md  external-workspace-directories.md  multi-model-config.md  permission-dialog-redraw-fix.md  project-config-path.md  security-layered-protection.md  todo-status-field.md  tui-ansi-stream-and-scrollback.md  tui-glyph-profile.md  tui-ink-style-parity.md  tui-paste-input.md  tui-startup-loading-gate.md  tui-transcript-viewport.md  windows-powershell-utf8-stdio.md  windows-terminal-glyph-fallback.md
frontend/: App.tsx  ansiStream.ts  index.tsx  input.ts  input_protocol.ts  messageLines.ts  package-lock.json  package.json  rendering.ts  slashCommands.ts  terminal_utils.ts  tsconfig.json  tui.ts
frontend/components/: Ansi.tsx  Composer.tsx  DialogFrame.tsx  Header.tsx  Message.tsx  ModelPicker.tsx  PermissionDialog.tsx  QuestionDialog.tsx  StatusBar.tsx  ThreadPicker.tsx  Transcript.tsx
scripts/: create_project_scaffold.sh  create_task_scaffold.sh  install_nocode_launcher.ps1  install_nocode_launcher.sh  nocode.ps1  ralph_loop.sh
tests/: test_agent_runtime.py  test_hitl_workspace_permissions.py  test_model_defaults.py  test_runtime_paths.py  test_search.py  test_skills_discover.py  test_startup_smoke.py  test_subagent_config.py  test_tool_kit.py
(+120 files in other folders)
